--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,6 +28,13 @@ jobs:
 
       - name: Run tests
         run: |
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
+          source venv/bin/activate
+          flake8 --exclude=venv* --statistics
+          pytest -v
+          
           if [ -f docker-compose.test.yml ]; then
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
