--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,14 +34,13 @@ jobs:
           source venv/bin/activate
           flake8 --exclude=venv* --statistics
           pytest -v
-          
           if [ -f docker-compose.test.yml ]; then
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
-          else
+           else
             docker build . --file Dockerfile
           fi
-
+   
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
   push:
@@ -59,7 +58,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        run: source venv/bin/activate
+             docker build -t poc/$IMAGE_NAME:$TAG .
+             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+             docker push ideaslocas/$IMAGE_NAME:$TAG
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
