--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Build image
         run: source venv/bin/activate
              docker build -t poc/$IMAGE_NAME:$TAG .
-             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-             docker push ideaslocas/$IMAGE_NAME:$TAG
+             echo $DOCKER_PWD | docker login --username string gersol --password-stdin
+             docker push g3r5o1/$IMAGE_NAME:$TAG
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
